# gh-sizer

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  build_and_release.yml  build_test_and_release.yml  lint.yml  release.yml  run_integration_tests.yml  run_integration_tests_linux.yml  run_integration_tests_windows.yml  test_and_lint.yml
src/: enums.rs  github_repository_lister.rs  lib.rs  linux_integration_tests.rs  main.rs  windows_integration_tests.rs
src/snapshots/: gh_sizer__generate_script__generate_script_generates_bash_script_with_file_output.snap  gh_sizer__generate_script__generate_script_generates_bash_script_with_json_formatted_output.snap  gh_sizer__generate_script__generate_script_generates_bash_script_with_stdout_output.snap  gh_sizer__generate_script__generate_script_generates_powershell_script_with_file_output.snap  gh_sizer__generate_script__generate_script_generates_powershell_script_with_json_formatted_output.snap  gh_sizer__generate_script_command_errors_when_output_filename_is_a_path.snap  gh_sizer__generate_script_command_errors_without_authenticated_gh_cli.snap  gh_sizer__generate_script_command_returns_script.snap  gh_sizer__generate_script_generates_bash_script_with_file_output.snap  gh_sizer__generate_script_generates_bash_script_with_json_formatted_output.snap  gh_sizer__generate_script_generates_bash_script_with_stdout_output.snap  gh_sizer__generate_script_returns_valid_script.snap  gh_sizer__linux_integration_tests__generate_script_command_errors_when_output_filename_is_a_path.snap  gh_sizer__linux_integration_tests__generate_script_command_errors_without_authenticated_gh_cli.snap  (+18 more)
