[package]
name = "gh-sizer"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
exitcode = "1.1.2"
tempfile = "3.8.0"

[dev-dependencies]
assert_cmd = "2.0.12"
insta = { version = "1.31.0", features = ["yaml"] }
mockall = "0.11.4"
predicates = "3.0.3"

[profile.dev.package.insta]
opt-level = 3

[features]
windows_integration_tests = []
linux_integration_tests = []