[package]
name = "gh-sizer"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
exitcode = "1.1.2"
path-slash = "0.2.1"
tempfile = "3.10.1"

[dev-dependencies]
assert_cmd = "2.0.16"
insta = { version = "1.40.0", features = ["yaml"] }
mockall = "0.13.0"
predicates = "3.1.2"

[profile.dev.package.insta]
opt-level = 3

[features]
windows_integration_tests = []
linux_integration_tests = []
